<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.levelzeros.utippy.AboutActivity"
    tools:showIn="@layout/activity_about">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/levelzero_logo"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            app:srcCompat="@drawable/lvlzero" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="48dp"
                android:paddingLeft="48dp"
                android:paddingRight="48dp"
                android:paddingStart="48dp"
                android:paddingTop="8dp"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="18sp"
                android:text="@string/message_about"
                android:textAlignment="center"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingEnd="48dp"
                android:paddingLeft="48dp"
                android:paddingRight="48dp"
                android:paddingStart="48dp"
                android:paddingTop="8dp"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="12sp"
                android:text="@string/message_credit"
                android:textAlignment="center" />


            <Button
                android:id="@+id/button_follow"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:background="@color/colorPrimary"
                android:text="@string/action_follow_facebook"
                android:textColor="@android:color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/button_join_us"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:background="@color/colorPrimary"
                android:text="@string/action_join_us"
                android:textColor="@android:color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/button_feedback"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:background="@color/colorPrimary"
                android:text="@string/action_feedback"
                android:textColor="@android:color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/button_github"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:background="@color/colorPrimary"
                android:text="OUR GITHUB"
                android:textColor="@android:color/white"
                android:textSize="15dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
